# eastmoney-mx-finance-mcp-server

./: .env.example  .gitignore  README.md  gitignore  pyproject.toml  server.py
tests/: test_mcp_integration.py  test_server.py
